# EmGlue

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  style.yml
cmake/: CPM.cmake  tools.cmake
include/glue/emscripten/: state.h
source/: state.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: example.cpp  state.cpp
